--- a/public/css/global.css
+++ b/public/css/global.css
@@ -11,7 +11,14 @@
 /*!* Dark mode *!*/
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #2d2d2e;
-        color: #d7dbdf;
+        background-color: #323437;
+        color: #a0a1a2;
+    }
+    /*so that links arnt so hard to read in dark mode*/
+    a:link {
+        color: lightskyblue;
+    }
+    a:visited {
+        color: cornflowerblue;
     }
 }
