Avoid autoload error when not using composer right away. Added reset css and a placeholder favicon as wel as a helper to inject links into the head of a page.

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,4 +1,8 @@
-/*  Put all the universal styles here.  */
+/**
+Global initializer styles.
+This will be included in html output to prevent the screen flashing white before loading the css files.
+This file should be as small as possible as it will be loaded on every page refresh.
+ */
 
 /* Light mode */
 @media (prefers-color-scheme: light) {
